--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="header__content">
           <div class="logo">
-            <a href="../main/index.html">
+            <a href="./index.html">
               <img class="logo" src="../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
             </a>
           </div>
@@ -108,7 +108,7 @@
                   </a>
                 </div>
                 <div class="card-wrapper">
-                  <a class="card" href="../../zoos/alligator/alligator.html">
+                  <a class="card" href="../zoos/alligator/alligator.html">
                     <figure>
                       <img class="card-image" src="../../assets/images/pets-slider/alligator.jpg" alt="alligator" />
                       <figcaption class="card-caption">
@@ -118,7 +118,7 @@
                   </a>
                 </div>
                 <div class="card-wrapper">
-                  <a class="card" href="../../zoos/gorilla/gorilla.html">
+                  <a class="card" href="../zoos/gorilla/gorilla.html">
                     <figure>
                       <img class="card-image" src="../../assets/images/pets-slider/gorilla.jpg" alt="gorilla" />
                       <figcaption class="card-caption">
@@ -148,7 +148,7 @@
                   </a>
                 </div>
                 <div class="card-wrapper">
-                  <a class="card" href="../../zoos/eagle/eagle.html">
+                  <a class="card" href="../zoos/eagle/eagle.html">
                     <figure>
                       <img class="card-image" src="../../assets/images/pets-slider/bald-eagle.jpg" alt="bald-eagle" />
                       <figcaption class="card-caption">
@@ -295,7 +295,7 @@
                 <nav class="footer-nav">
                   <ul class="menu footer-menu">
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="#">about</a>
+                      <a class="menu__link" href="./index.html">about</a>
                     </li>
                     <li class="menu__item footer-menu-item">
                       <a class="menu__link" href="../../page-not-found/page-not-found.html">contact us</a>
