--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -33,7 +33,7 @@
                   <a class="menu__link" href="../zoos/panda/panda.html">zoos</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="../pages/page-not-found/page-not-found.html">contact us</a>
+                  <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
                 </li>
                 <li class="menu__item">
                   <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
@@ -148,7 +148,7 @@
                 <nav class="footer-nav">
                   <ul class="menu footer-menu">
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="#">about</a>
+                      <a class="menu__link" href="../../main/index.html">about</a>
                     </li>
                     <li class="menu__item footer-menu-item">
                       <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
