--- a/online-zoo/pages/zoos/eagle/eagle.html
+++ b/online-zoo/pages/zoos/eagle/eagle.html
@@ -23,16 +23,16 @@
           <nav class="nav">
             <ul class="menu">
               <li class="menu__item">
-                <a class="menu__link" href="../../main/index.html">about</a>
+                <a class="menu__link" href="../../../main/index.html">about</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="../../map/map.html">map</a>
+                <a class="menu__link" href="../../../map/map.html">map</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link menu__link--active" href="javascript:void(0)">zoos</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
+                <a class="menu__link" href="../../page-not-found/page-not-found.html">contact us</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
