--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -32,7 +32,7 @@
                 <a class="menu__link" href="../zoos/panda/panda.html">zoos</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="../../page-not-found/page-not-found.html">contact us</a>
+                <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
@@ -298,7 +298,7 @@
                       <a class="menu__link" href="./index.html">about</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../../page-not-found/page-not-found.html">contact us</a>
+                      <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
                     </li>
                     <li class="menu__item footer-menu-item">
                       <a class="menu__link" href="../map/map.html">map</a>
