--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -24,7 +24,7 @@
             <nav class="nav">
               <ul class="menu">
                 <li class="menu__item">
-                  <a class="menu__link" href="../../pages/main/index.html">about</a>
+                  <a class="menu__link" href="../../main/index.html">about</a>
                 </li>
                 <li class="menu__item">
                   <a class="menu__link menu__link--active" href="javascript:void(0)">map</a>
