--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -17,14 +17,14 @@
         <div class="container">
           <div class="header__content">
             <div class="logo">
-              <a href="../../main/index.html">
+              <a href="../main/index.html">
                 <img class="logo" src="../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
             </div>
             <nav class="nav">
               <ul class="menu">
                 <li class="menu__item">
-                  <a class="menu__link" href="../../main/index.html">about</a>
+                  <a class="menu__link" href="../main/index.html">about</a>
                 </li>
                 <li class="menu__item">
                   <a class="menu__link menu__link--active" href="javascript:void(0)">map</a>
@@ -137,7 +137,7 @@
         <div class="container content">
           <div class="footer-content">
             <div class="footer-links__logo-button">
-              <a href="../../main/index.html">
+              <a href="../main/index.html">
                 <img class="logo footer-logo" src="../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
               <div class="donate__button">
@@ -148,7 +148,7 @@
                 <nav class="footer-nav">
                   <ul class="menu footer-menu">
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../../main/index.html">about</a>
+                      <a class="menu__link" href="../main/index.html">about</a>
                     </li>
                     <li class="menu__item footer-menu-item">
                       <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
